--- a/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
+++ b/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
@@ -14,55 +14,62 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <center><h1>Clientes</h1></center>
-            <br />
-            <button class="btn agregarBtn" onclick="window.location.href='/Clientes/AgregarOEditarClientes'"><i class="fas fa-plus"></i> Agregar</button>
+            <button class="btn agregarBtn" style="margin-bottom: -230px" onclick="window.location.href='/Clientes/AgregarOEditarClientes'"><i class="fas fa-plus"></i> Agregar</button>
+            @if (Model.Count() > 0)
+            {
+                <center><h1>Clientes</h1></center>
+                <br />
+                <br />
+                <table class="table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Telléfono</th>
+                            <th>Dirección</th>
+                            <th>Correo</th>
+                            <th>Contraseña</th>
+                            <th>Rol</th>
+                            <th colspan="2">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
 
-            <br />
-            <table class="table-hover table-striped">
-                <thead>
-                    <tr>
-                        <th>Nombre</th>
-                        <th>Telléfono</th>
-                        <th>Dirección</th>
-                        <th>Correo</th>
-                        <th>Contraseña</th>
-                        <th>Rol</th>
-                        <th colspan="2">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @if (Model.Count() > 0)
-                    {
-                        foreach (var cl in Model)
+                        @foreach (var cl in Model)
                         {
-                    <tr>
-                        <td>@cl.nombre</td>
-                        <td>@cl.telefono</td>
-                        <td>@cl.direccion</td>
-                        <td>@cl.correo</td>
-                        <td>@cl.pass</td>
-                        <td>@cl.rol</td>
-                        <td width="20">
+                            <tr>
+                                <td>@cl.nombre</td>
+                                <td>@cl.telefono</td>
+                                <td>@cl.direccion</td>
+                                <td>@cl.correo</td>
+                                <td>@cl.pass</td>
+                                <td>@cl.rol</td>
+                                <td width="20">
 
-                            <button class="btn btn-info "
-                                    onclick="window.location.href = '/Clientes/AgregarOEditarClientes?idCliente='+@cl.idCliente">
-                                <i class="fas fa-pencil-alt"></i> Editar
-                            </button>
-                        </td>
-                        <td width="20">
-                            <button class="btn btn-danger"
-                                    onclick="AlertaDelete('/Clientes/EliminarClientes?id='+@cl.idCliente)">
-                                <i class="fas fa-trash-alt"></i> Eliminar
-                            </button>
-                        </td>
-                    </tr>
-
+                                    <button class="btn btn-info "
+                                            onclick="window.location.href = '/Clientes/AgregarOEditarClientes?idCliente='+@cl.idCliente">
+                                        <i class="fas fa-pencil-alt"></i> Editar
+                                    </button>
+                                </td>
+                                <td width="20">
+                                    <button class="btn btn-danger"
+                                            onclick="AlertaDelete('/Clientes/EliminarClientes?id='+@cl.idCliente)">
+                                        <i class="fas fa-trash-alt"></i> Eliminar
+                                    </button>
+                                </td>
+                            </tr>
                         }
 
-                    }
-                </tbody>
-            </table>
+
+
+                    </tbody>
+                </table>
+            }
+            else
+            {
+                <h2> ¡No hay marcas registradas! </h2>
+
+            }
+
         </div>
     </div>
 </div>
