--- a/SistemaInventario/Views/Marcas/MostrarMarcas.cshtml
+++ b/SistemaInventario/Views/Marcas/MostrarMarcas.cshtml
@@ -7,22 +7,25 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <center><h1>Marcas</h1></center>
             <br />
-            <button class="btn agregarBtn" onclick="window.location.href='/Marcas/AgregarOEditarMarcas'"><i class="fas fa-plus"></i>Agregar Marca</button>
+            <button class="btn agregarBtn" style="margin-bottom: -230px" onclick="window.location.href='/Marcas/AgregarOEditarMarcas'"><i class="fas fa-plus"></i>Agregar Marca</button>
             <br />
-            <table class="table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>NOMBRE</th>
-                        <th colspan="2">ACCIONES</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @if (Model.Count() > 0)
-                    {
-                        foreach (var mar in Model)
+            @if (Model.Count() > 0)
+            {
+                <center><h1>Marcas</h1></center>
+                <br />
+                <br />
+                <table class="table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>NOMBRE</th>
+                            <th colspan="2">ACCIONES</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        @foreach (var mar in Model)
                         {
                             <tr>
                                 <td>@mar.idMarca</td>
@@ -36,13 +39,13 @@
                                 </td>
                             </tr>
                         }
-                    }
-                    else
-                    {
-
-                    }
-                </tbody>
-            </table>
+                        
+                    </tbody>
+                </table>
+            } else
+            {
+            <h2> ¡No hay marcas registradas! </h2 >
+            }
         </div>
     </div>
 </div>
