--- a/SistemaInventario/Views/Proveedores/MostrarProveedores.cshtml
+++ b/SistemaInventario/Views/Proveedores/MostrarProveedores.cshtml
@@ -8,30 +8,32 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <center>
-                <h1>Proveedores</h1>
-            </center>
-            <br />
-            <button class="btn agregarBtn"
-                    onclick="window.location.href = '/Proveedores/EditOrAddProveedores'">
+            <button style="margin-bottom: -230px" class="btn agregarBtn" onclick="window.location.href = '/Proveedores/EditOrAddProveedores'">
                 <i class="fas fa-plus"></i> Agregar
             </button>
             <br />
-            <!--table-striped-->
-            <table class="table-hover table-striped">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Nombre</th>
-                        <th>Teléfono</th>
-                        <th>Dirección</th>
-                        <th colspan="2">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @if (Model.Count() > 0)
-                    {
-                        foreach (var i in Model)
+            @if (Model.Count() > 0)
+            {
+                <center>
+                    <h1>Proveedores</h1>
+                </center>
+                <br />
+                <br />
+
+                <!--table-striped-->
+                <table class="table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Nombre</th>
+                            <th>Teléfono</th>
+                            <th>Dirección</th>
+                            <th colspan="2">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        @foreach (var i in Model)
                         {
                             <tr>
                                 <td>@i.idProveedor</td>
@@ -41,31 +43,29 @@
                                 <td width="20">
                                     <!-- style="background-color: #82E897"-->
                                     <button class="btn btn-info"
-                                            onclick="window.location.href = '/Proveedores/EditOrAddProveedores?idProveedor='+@i.idProveedor"><i class="fas fa-pencil-alt"></i> 
-                                         Editar
+                                            onclick="window.location.href = '/Proveedores/EditOrAddProveedores?idProveedor='+@i.idProveedor">
+                                        <i class="fas fa-pencil-alt"></i>
+                                        Editar
                                     </button>
                                 </td>
                                 <td width="20">
                                     <button class="btn btn-danger"
                                             onclick="AlertaDelete('/Proveedores/EliminarProveedor?idProv='+@i.idProveedor)">
-                                         <i class="fas fa-trash-alt"></i> Eliminar
+                                        <i class="fas fa-trash-alt"></i> Eliminar
                                     </button>
                                 </td>
                             </tr>
                         }
-                    }
-                    else
-                    {
-                        <tr>
-                            <td colspan="6">
-                                <center class="text-danger">
-                                    ¡No hay datos para mostrar!
-                                </center>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
+
+
+
+                    </tbody>
+                </table>
+            }
+            else
+            {
+            <h2> ¡No hay marcas registradas! </h2>
+            }
         </div>
     </div>
 </div>
