Mostrar tablas o tarjetas manteniendo su estado al recargar

--- a/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
+++ b/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
@@ -139,28 +139,7 @@ else
         </div>
     }
 }
-
-
-
-
-
-<script type="text/javascript">
-    function mostrarTabla() {
-        var tabla = document.getElementById("tabla");
-        var tarjeta = document.getElementById("tarjetas");
-        tabla.style.display = "block";
-        tarjeta.style.display = "none";
-    }
-
-    function mostrarTarjeta() {
-        var tabla = document.getElementById("tabla");
-        var tarjeta = document.getElementById("tarjetas");
-        tabla.style.display = "none";
-        tarjeta.style.display = "flex";
-    }
-
-</script>
-
+<script src="~/Scripts/tarjetasTablas.js"></script>
 <script src="~/Scripts/Alerta.js"></script>
 <script src="~/Scripts/PeticionesJQuerry/AgregarAlCarrito.js"></script>
 <script src="~/Scripts/PeticionesJQuerry/SacarDelCarrito.js"></script>
